# ai-speaker-detection

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.lambda  LICENSE  README.md  lambda_main.py  pyproject.toml  run_detect.py  test_media_samples.py
app/: main.py
app/api/routes/: healthcheck.py  speaker_identification.py
app/core/: config.py  warnings_filter.py
app/models/: speaker_identification.py
app/services/: identification.py  speaker_service.py
