[project]
name = "ai-speaker-detection"
version = "1.0.0"
description = "A FastAPI service for speaker identification"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "librosa>=0.11.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.3.2",
    "speechbrain>=1.0.3",
    "torch>=1.9.0",
    "torchaudio>=0.9.0",
    "uvicorn[standard]==0.24.0",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
